syntax = "proto3";

option csharp_namespace = "BlazorGrpc.Shared";
import "Protos/shared_model.proto";

/* https://learn.microsoft.com/en-us/aspnet/core/grpc/protobuf?view=aspnetcore-5.0 */
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service LocationProto {

	////////// create //////////
  rpc AddLocation(AddLocationRequest) returns (LocationId);

	////////// read //////////
  rpc GetLocationById(LocationId) returns (LocationResponse);

  rpc GetLocationByName(Name) returns (LocationResponse);

  rpc GetLocationByCoordinate(Coordinate) returns (LocationResponse);

  rpc GetLocationByRobotId(RobotId) returns (LocationsResponse);

  rpc GetLocations(google.protobuf.Empty) returns (LocationsResponse);

    ////////// update //////////
  rpc UpdateLocation(LocationIdAndUpdate) returns (google.protobuf.Empty);

  rpc AddRobotToLocation(LocationIdAndRobotId) returns (google.protobuf.Empty);

  	////////// delete //////////
  rpc DeleteLocation(LocationId) returns (google.protobuf.Empty);

  rpc RemoveRobotFromLocation(LocationIdAndRobotId) returns (google.protobuf.Empty);

}

////////// request objects //////////
message AddLocationRequest {
  string name = 1;
  double x = 2;
  double y = 3;
}
 
// RobotId and LocationId filter are imported from shared_model.proto




message Name{ // filter
  string value = 1;
}
message Coordinate{ // filter
  double x = 1;
  double y = 2;
}

message LocationIdAndUpdate {
  string id = 1;
  UpdateLocationObj update = 2; // intermediary obj
}

message LocationIdAndRobotId {
  string location_id = 1;
  string robot_id = 2;
}

////////// response objects //////////
message LocationResponse {
  string id = 1;
  string name = 2;
  double x = 3;
  double y = 4;
  repeated string robotIds = 5;
}

message LocationsResponse {
  repeated LocationResponse locations = 1;
}

////////// intermediary objects //////////
message UpdateLocationObj {
  string name = 1;
  repeated string robotIds = 2;
}
